tmp/dependencies/hs-plugins-1.3.1/testsuite/dynload/should_fail/Plugin.hs
{-# OPTIONS -fglasgow-exts #-}
module Plugin where

import API
import AltData.Dynamic

v :: Int
v = 0xdeadbeef

resource_dyn :: Dynamic
resource_dyn = toDyn v

